# awegnergithub.github.io-source

./: .gitignore  .gitmodules  README.md  deploy.sh  fabfile.py  generate_content_debug.bat  generate_content_production.bat  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  run_debug_server.bat
cache/: ArticlesGenerator-Readers  PagesGenerator-Readers
content/: 2011_02_04_a-new-more-fair-rtd.md  2012_04_22_monitoring-language-on-the-game-servers.md  2012_06_30_homing-projectiles-are-awesome.md  2013_02_25_give-some-refined-win-some-prizes.md  2013_08_13_i-had-a-secret-addiction-to-the-tf2-idling-economy-but-i'm-better-now-(honest).md  2013_12_05_mann-vs-vipers-beaten.md  2014_04_14_how-not-to-appeal-a-ban.md  2014_04_22_how-to-appeal-a-ban-effectively.md  2014_07_02_moderation-postion-on-moderators.md  2015_01_02_can-a-machine-be-taught-to-flag-comments-automatically.md  2015_01_08_thanks-for-all-the-fish.md  2015_04_06_i'm-running-to-be-a-moderator-of-stack-overflow.md  2015_07_09_how-i-set-up-this-site-with-github-pages-and-cloudflare.md  2015_08_06_analysis-of-links-posted-to-stack-overflow.md  2015_08_07_a-proposal-to-fix-broken-links-on-stack-overflow.md  2015_08_10_link-analysis---technical-explanation.md  2015_10_10_how-not-to-recruit-me.md  2015_11_18_i'm-running-for-moderator-on-stack-overflow-again.md  2015_12_11_how-i-set-up-openshift-travisci-and-flask.md  2016-12-09_review_of_data_analysis_with_pandas_udemy_course.md  2016_03_23_my-experiences-releasing-a-package-to-pypi.md  2016_11_06_third-times-the-charm.md  (+17 more)
pelican-template/: README.md  (+1 more)
(+86 files in other folders)
