[project]
name = "redesign-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "markdown-customblocks>=1.5.4",
    "markupsafe>=3.0.3",
    "pelican>=4.12.0",
    "pelican-extended-sitemap>=1.2.3",
    "pelican-seo>=1.4.0",
    "pelican-series>=3.1.1",
    "pytz>=2026.1.post1",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
]
